bug fixed: email resend